# asr_practice

./: .gitignore  README.md  pyproject.toml
config/: benchmark.json  benchmark.yaml  default.yaml
experiments/: gd.jsonl  golos_dataset.ipynb  whisper-small-ru.jsonl  whisper_golos.ipynb
scripts/: __init__.py  build_synthetic_corpus.py  diarize.py  download_model.py  evaluate_benchmark.py
src/: app_config.py  catalog.py  context_graph.py  main.py  metrics.py  nemo_runtime.py  pipeline.py  sample.opus
src/asr/: __init__.py  base.py  gigaam.py  terminology.py  whisper.py
src/audio/: __init__.py  normalization.py
src/diarization/: __init__.py  base.py  nemo.py  pyannote.py  transcript.py
src/evaluation/: __init__.py  quality.py
src/models/: asr.py  configs.py  diarization.py  inference.py  vad.py
src/reporting/: __init__.py  render.py
src/runtime/: __init__.py  preflight.py  resources.py
src/vad/: base.py  silero_vad.py
