[project]
name = "fire-catalog-benchmark"
version = "0.2.0"
description = "Reproducible CTC product-recognition benchmark for fire-safety equipment"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "faster-whisper>=1.2.1",
    "jiwer>=3,<4",
    "nemo-toolkit[asr]>=2.7.3,<3",
    "numpy>=1.26,<2.3",
    "pydub>=0.25.1",
    "pyannote.audio>=4,<5",
    "pyyaml>=6,<7",
    "silero-vad>=6.2.1",
    "soundfile>=0.13.1",
    "tabulate>=0.9",
    "torch @ https://download.pytorch.org/whl/cu126/torch-2.8.0%2Bcu126-cp310-cp310-manylinux_2_28_x86_64.whl",
    "torchaudio @ https://download.pytorch.org/whl/cu126/torchaudio-2.8.0%2Bcu126-cp310-cp310-manylinux_2_28_x86_64.whl",
]

[tool.uv]
package = false
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
